# nucgrep

./: .gitignore  README.md
.github/workflows/: rust.yml
nucgrep/: Cargo.toml
nucgrep/src/: lib.rs  main.rs  search_fasta.rs
nucgrep/tests/: cli.rs
nucgrep/tests/expected/: fasta_one_record_per_line_mixed_case.fa.out  fasta_with_line_breaks.fa.out  orig.fa.out  rev.fa.out  rev_orig.fa.out  simple.fa.headers_only_reverse_complement.out  simple.fa.reverse_complement.out  simple.fa_reverse_complement.out
nucgrep/tests/inputs/: fasta_one_record_per_line.fa  fasta_one_record_per_line_mixed_case.fa  fasta_with_line_breaks.fa  fasta_with_line_breaks_mixed_case.fa  invalid.fa  longer.fa  rev_orig.fa  simple.fa
