[package]
name = "nucgrep"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
seq_io = "0.3"
colored = "2"
regex = "1.5"
generic_levenshtein = "0.2"
textwrap = "0.15.0"
seal = "0.1.4"
bio = "0.41.0"


[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"


[profile.release]
lto = true